<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="114dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:src="@drawable/logo"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:singleLine="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:padding="8dp"
        android:background="@drawable/custom_edt"
        android:hint="Email"
        android:textColor="@color/black" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:singleLine="true"
        android:layout_alignLeft="@+id/editText1"
        android:layout_below="@+id/editText1"
        android:layout_marginTop="10dp"
        android:padding="8dp"
        android:inputType="textPassword"
        android:background="@drawable/custom_edt"
        android:hint="@string/txt_password"
        android:textColor="@color/black" />


    <Button
        android:id="@+id/button1"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_below="@+id/editText2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/btncustom"
        android:text="@string/action_logon"
        android:textColor="#FFF"/>
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/txt_fplogon" />

</LinearLayout>